--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -56,12 +56,12 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "scripts": {
-      "collection": "script",
-      "via": "lastEditor"
-    },
     "likes": {
       "collection": "like",
+      "via": "author"
+    },
+    "scripts": {
+      "collection": "script",
       "via": "author"
     }
   }
