--- a/api/dislike/models/Dislike.settings.json
+++ b/api/dislike/models/Dislike.settings.json
@@ -18,16 +18,16 @@
       "model": "user",
       "plugin": "users-permissions"
     },
-    "post": {
-      "model": "post",
-      "via": "dislikes"
-    },
     "contentcreator": {
       "model": "contentcreator",
       "via": "dislikes"
     },
     "profile": {
       "model": "profile",
+      "via": "dislikes"
+    },
+    "sessionpublication": {
+      "model": "sessionpublication",
       "via": "dislikes"
     }
   }
