--- a/api/script/models/Script.settings.json
+++ b/api/script/models/Script.settings.json
@@ -25,14 +25,6 @@
       "via": "scripts",
       "plugin": "users-permissions"
     },
-    "speed": {
-      "enum": [
-        "normal",
-        "ff",
-        "sff"
-      ],
-      "type": "enumeration"
-    },
     "scriptsequences": {
       "collection": "scriptsequence",
       "via": "script"
@@ -51,6 +43,10 @@
       ],
       "type": "enumeration",
       "required": true
+    },
+    "sessionpublications": {
+      "collection": "sessionpublication",
+      "via": "script"
     }
   }
 }
