fix sessioncontent flow

--- a/api/comment/models/Comment.settings.json
+++ b/api/comment/models/Comment.settings.json
@@ -28,6 +28,10 @@
     "contentcreator": {
       "model": "contentcreator",
       "via": "comments"
+    },
+    "sessioncontents": {
+      "collection": "sessioncontent",
+      "via": "comment"
     }
   }
 }
