--- a/api/like/models/Like.settings.json
+++ b/api/like/models/Like.settings.json
@@ -28,7 +28,7 @@
       "via": "likes"
     },
     "sessionpublication": {
-      "model": "sessionpublication",
+      "model": "sessioncontent",
       "via": "likes"
     }
   }
