--- a/api/scriptsequence/models/Scriptsequence.settings.json
+++ b/api/scriptsequence/models/Scriptsequence.settings.json
@@ -32,6 +32,9 @@
     "script": {
       "model": "script",
       "via": "scriptsequences"
+    },
+    "position": {
+      "type": "integer"
     }
   }
 }
