include management of state

--- a/api/profile/models/Profile.settings.json
+++ b/api/profile/models/Profile.settings.json
@@ -32,6 +32,10 @@
     },
     "contentcreator": {
       "model": "contentcreator"
+    },
+    "sessioncontents": {
+      "collection": "sessioncontent",
+      "via": "profile"
     }
   }
 }
