--- a/api/sessioncontent/models/Sessioncontent.settings.json
+++ b/api/sessioncontent/models/Sessioncontent.settings.json
@@ -43,6 +43,10 @@
     "comment": {
       "model": "comment",
       "via": "sessioncontents"
+    },
+    "profile": {
+      "model": "profile",
+      "via": "sessioncontents"
     }
   }
 }
