--- a/api/profile/models/Profile.settings.json
+++ b/api/profile/models/Profile.settings.json
@@ -28,6 +28,9 @@
     "sessioncontents": {
       "collection": "sessioncontent",
       "via": "profile"
+    },
+    "description": {
+      "type": "string"
     }
   }
 }
