--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "bull": "^3.18.0",
     "expo-server-sdk": "^3.4.0",
     "keygenerator": "^1.0.4",
     "knex": "latest",
     "lodash": "^4.17.15",
     "mysql": "latest",
+    "redis": "^3.0.2",
     "strapi": "3.0.0-beta.17.2",
     "strapi-admin": "3.0.0-beta.17.2",
     "strapi-hook-bookshelf": "3.0.0-beta.17.2",
