--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "bull": "^3.18.0",
+    "escape-string-regexp": "^4.0.0",
     "expo-server-sdk": "^3.4.0",
     "keygenerator": "^1.0.4",
     "knex": "latest",
