--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "arena": "0.0.2",
     "bull": "^3.18.0",
+    "bull-arena": "^3.2.2",
     "escape-string-regexp": "^4.0.0",
     "expo-server-sdk": "^3.4.0",
     "keygenerator": "^1.0.4",
@@ -19,20 +21,18 @@
     "lodash": "^4.17.15",
     "mysql": "latest",
     "redis": "^3.0.2",
-    "strapi": "3.0.0-beta.17.2",
-    "strapi-admin": "3.0.0-beta.17.2",
-    "strapi-hook-bookshelf": "3.0.0-beta.17.2",
-    "strapi-hook-knex": "3.0.0-beta.17.2",
-    "strapi-plugin-content-manager": "3.0.0-beta.17.2",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.17.2",
-    "strapi-plugin-email": "3.0.0-beta.17.2",
-    "strapi-plugin-settings-manager": "3.0.0-beta.17.2",
-    "strapi-plugin-upload": "3.0.0-beta.17.2",
-    "strapi-plugin-users-permissions": "3.0.0-beta.17.2",
-    "strapi-utils": "^3.0.0-beta.17.2"
+    "strapi": "3.2.3",
+    "strapi-admin": "3.2.3",
+    "strapi-connector-bookshelf": "^3.2.3",
+    "strapi-plugin-content-manager": "3.2.3",
+    "strapi-plugin-content-type-builder": "3.2.3",
+    "strapi-plugin-email": "3.2.3",
+    "strapi-plugin-upload": "3.2.3",
+    "strapi-plugin-users-permissions": "3.2.3",
+    "strapi-utils": "3.2.3"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Maira Sala"
   },
   "strapi": {
     "uuid": "89876290-bdb2-4a2d-9cf8-f04c55bcbf25"
