--- a/api/appuser/models/Appuser.settings.json
+++ b/api/appuser/models/Appuser.settings.json
@@ -23,6 +23,10 @@
     "enabled": {
       "default": true,
       "type": "boolean"
+    },
+    "locale": {
+      "type": "string",
+      "default": "en"
     }
   }
 }
