--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "i18next-fs-backend": "^1.0.7"
+  },
   "dependencies": {
     "bull": "^3.18.0",
     "escape-string-regexp": "^4.0.0",
     "expo-server-sdk": "^3.4.0",
+    "i18next": "^19.8.4",
     "keygenerator": "^1.0.4",
     "knex": "latest",
     "lodash": "^4.17.15",
