--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "lodash": "^4.17.15",
     "mysql": "latest",
     "redis": "^3.0.2",
-    "strapi": "3.0.0-beta.17.2",
-    "strapi-admin": "3.0.0-beta.17.2",
-    "strapi-hook-bookshelf": "3.0.0-beta.17.2",
-    "strapi-hook-knex": "3.0.0-beta.17.2",
-    "strapi-plugin-content-manager": "3.0.0-beta.17.2",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.17.2",
-    "strapi-plugin-email": "3.0.0-beta.17.2",
-    "strapi-plugin-settings-manager": "3.0.0-beta.17.2",
-    "strapi-plugin-upload": "3.0.0-beta.17.2",
-    "strapi-plugin-users-permissions": "3.0.0-beta.17.2",
-    "strapi-utils": "^3.0.0-beta.17.2"
+    "strapi": "3.0.0-beta.18.3",
+    "strapi-admin": "3.0.0-beta.18.3",
+    "strapi-connector-bookshelf": "3.0.0-beta.18.3",
+    "strapi-plugin-content-manager": "3.0.0-beta.18.3",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.18.3",
+    "strapi-plugin-email": "3.0.0-beta.18.3",
+    "strapi-plugin-graphql": "3.0.0-beta.18.3",
+    "strapi-plugin-upload": "3.0.0-beta.18.3",
+    "strapi-plugin-users-permissions": "3.0.0-beta.18.3",
+    "strapi-utils": "3.0.0-beta.18.3"
   },
   "author": {
     "name": "A Strapi developer"
