add likes collection to appuser

--- a/api/appuser/models/Appuser.settings.json
+++ b/api/appuser/models/Appuser.settings.json
@@ -24,6 +24,10 @@
     },
     "script": {
       "model": "script"
+    },
+    "likes": {
+      "via": "appuser",
+      "collection": "like"
     }
   }
 }
