--- a/api/like/models/Like.settings.json
+++ b/api/like/models/Like.settings.json
@@ -20,7 +20,8 @@
       "model": "sessioncontent"
     },
     "appuser": {
-      "model": "appuser"
+      "model": "appuser",
+      "via": "likes"
     }
   }
 }
