include changes in location/type

--- a/api/location/models/Location.settings.json
+++ b/api/location/models/Location.settings.json
@@ -17,6 +17,14 @@
     "sequences": {
       "via": "location",
       "collection": "sequence"
+    },
+    "creditsPosition": {
+      "type": "enumeration",
+      "enum": [
+        "opening",
+        "closing"
+      ],
+      "required": false
     }
   }
 }
