--- a/api/type/models/Type.settings.json
+++ b/api/type/models/Type.settings.json
@@ -17,6 +17,11 @@
     },
     "name": {
       "type": "string"
+    },
+    "credits": {
+      "type": "boolean",
+      "default": false,
+      "required": true
     }
   }
 }
